--- a/PakiPaki-web-main/PakiPaki-web-main/static/index.html
+++ b/PakiPaki-web-main/PakiPaki-web-main/static/index.html
@@ -5,26 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>PakiPaki</title>
   <style>
-    body{font-family:sans-serif;max-width:720px;margin:40px auto;padding:0 12px}
-    button{padding:10px 14px;border:0;border-radius:8px;background:#111;color:#fff;cursor:pointer}
-    button[disabled]{background:#999;cursor:not-allowed}
-    .badge{display:inline-block;padding:6px 10px;border-radius:8px;color:#fff}
+    :root{--bg:#0b0f17;--fg:#e7ecf3;--sub:#9fb3c8;--accent:#5b8cff}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,Segoe UI,Apple SD Gothic Neo,Apple Color Emoji,Arial,sans-serif;background:var(--bg);color:var(--fg)}
+    .wrap{max-width:1024px;margin:0 auto;padding:28px 16px 60px}
+    .hero{display:grid;grid-template-columns:1.2fr 1fr;gap:28px;align-items:center;margin:24px 0 36px}
+    .hero h1{font-size:clamp(28px,4vw,44px);line-height:1.1;margin:0 0 12px}
+    .hero p{color:var(--sub);margin:0}
+    .imgbox{border-radius:16px;overflow:hidden;box-shadow:0 10px 40px rgba(0,0,0,.45);background:#0e1420}
+    .imgbox img{display:block;width:100%;height:auto}
+    .card{background:#0e1420;border:1px solid #1c2230;border-radius:16px;padding:18px;margin-top:16px}
+    .badge{display:inline-block;padding:6px 10px;border-radius:10px;color:#fff}
     .normal{background:#22c55e}.suspect{background:#ef4444}
-    #status{margin:12px 0;color:#0b6efd}
-    pre{background:#f6f8fa;padding:10px;border-radius:6px;overflow:auto}
+    button{padding:10px 14px;border:0;border-radius:10px;background:var(--accent);color:#fff;cursor:pointer}
+    button[disabled]{background:#2c3650;cursor:not-allowed}
+    input[type=file]{width:100%;padding:12px;background:#0b111c;border:1px dashed #2b364b;border-radius:12px;color:#9fb3c8}
+    #status{margin:8px 0 4px;color:#9bb8ff}
+    pre{background:#0b111c;border:1px solid #1c2230;padding:12px;border-radius:12px;overflow:auto}
+    @media (max-width:900px){.hero{grid-template-columns:1fr;gap:18px}}
   </style>
 </head>
 <body>
-  <h2>🧠 PakiPaki — 파킨슨 조기 스크리닝</h2>
-  <p>WAV 파일을 선택하고 업로드하세요.</p>
+  <div class="wrap">
+    <!-- 상단: Gamma 스타일 히어로 섹션 (이미지는 Gamma에서 가져온 것) -->
+    <section class="hero">
+      <div>
+        <h1>🧠 PakiPaki — 파킨슨 조기 스크리닝</h1>
+        <p>Gamma의 소개/비주얼을 유지하면서, 아래에서 바로 음성 파일을 업로드하여 예측할 수 있습니다.</p>
+        <div class="card" style="margin-top:18px">
+          <strong>사용 방법</strong>
+          <ol style="margin:6px 0 0 18px;color:#c2cfdf">
+            <li>WAV 파일을 선택합니다(권장: 10–20초).</li>
+            <li>업로드 버튼을 누르면 서버에서 특징 추출 → 예측이 수행됩니다.</li>
+          </ol>
+        </div>
+      </div>
+      <div class="imgbox">
+        <!-- Gamma에서 내보낸 대표 이미지를 사용하세요 -->
+        <img src="YOUR_GAMMA_HERO_IMAGE_URL" alt="PakiPaki preview">
+      </div>
+    </section>
 
-  <input type="file" id="fileInput" accept=".wav,audio/wav" />
-  <button id="btnUpload" disabled>업로드</button>
-
-  <p id="status">대기중</p>
-  <div id="result"></div>
-
+    <!-- 하단: 업로드/결과 카드 (현재 Render 백엔드 /predict 사용) -->
+    <section class="card">
+      <h3 style="margin-top:0">파일 업로드</h3>
+      <input type="file" id="fileInput" accept=".wav,audio/wav" />
+      <div style="display:flex;gap:10px;margin-top:10px">
+        <button id="btnUpload" disabled>업로드</button>
+        <div id="status">대기중</div>
+      </div>
+      <div id="result" style="margin-top:10px"></div>
+    </section>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
-
