--- a/static/index.html
+++ b/static/index.html
@@ -1,30 +1,120 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>PakiPaki</title>
   <style>
-    body{font-family:sans-serif;max-width:720px;margin:40px auto;padding:0 12px}
-    button{padding:10px 14px;border:0;border-radius:8px;background:#111;color:#fff;cursor:pointer}
-    button[disabled]{background:#999;cursor:not-allowed}
-    .badge{display:inline-block;padding:6px 10px;border-radius:8px;color:#fff}
-    .normal{background:#22c55e}.suspect{background:#ef4444}
-    #status{margin:12px 0;color:#0b6efd}
-    pre{background:#f6f8fa;padding:10px;border-radius:6px;overflow:auto}
+    :root{
+      --bg:#faf7f5; --ink:#0b0f17; --sub:#6c7a8b; --card:#e5ecff;
+      --brand:#1d2a60; --accent:#5b8cff; --border:#e6e8ef;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,Segoe UI,Apple SD Gothic Neo,Arial,sans-serif}
+    .wrap{max-width:1120px;margin:0 auto;padding:28px 16px 64px}
+
+    /* 헤더/히어로 */
+    .hero{display:grid;grid-template-columns:1.1fr 1fr;gap:28px;align-items:center;margin:8px 0 32px}
+    .hero h1{font-size:clamp(28px,4vw,40px);line-height:1.15;margin:0 0 10px}
+    .hero p{margin:0;color:var(--sub)}
+    .logo{max-width:320px;width:70%;margin:0 0 14px}
+    .hero .illust{border-radius:18px;overflow:hidden;box-shadow:0 12px 40px rgba(0,0,0,.08)}
+    .hero .illust img{display:block;width:100%;height:auto}
+
+    /* 3 포인트 */
+    .row{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin:28px 0 20px}
+    .card{background:#eef2ff;border:1px solid var(--border);border-radius:14px;padding:18px}
+    .card h3{margin:0 0 6px}
+    .muted{color:var(--sub)}
+
+    /* 소개 섹션 */
+    .section{margin:36px 0}
+    .section h2{margin:0 0 6px;font-size:28px}
+    .note{background:var(--card);border:1px solid #cfd8ff;padding:12px 14px;border-radius:10px;color:#344160}
+
+    /* CTA 슬라이드(이미지 위 투명 버튼) */
+    .slide-cta{position:relative;max-width:1200px;margin:40px auto 0}
+    .slide-cta .slide-img{display:block;width:100%;height:auto;border-radius:18px;box-shadow:0 12px 40px rgba(0,0,0,.08)}
+    .slide-cta .hotspot{
+      position:absolute;
+      left:50%;                 /* 가운데 */
+      top:80%;                  /* 버튼 세로 위치(퍼센트) */
+      transform:translate(-50%,-50%);
+      width:16%;                /* 버튼 가로폭(퍼센트) */
+      height:8%;                /* 버튼 높이(퍼센트) */
+    }
+    @media (max-width:900px){
+      .hero{grid-template-columns:1fr}
+      .row{grid-template-columns:1fr}
+      .slide-cta .hotspot{top:82%;width:42%;height:10%}
+    }
+
+    /* 보조 버튼(이미지 아래 표시용, 선택) */
+    .center{text-align:center}
+    .btn{
+      display:inline-block;background:var(--brand);color:#fff;text-decoration:none;
+      padding:12px 18px;border-radius:12px;font-weight:700
+    }
+    .btn:hover{opacity:.92}
   </style>
 </head>
 <body>
-  <h2>🧠 PakiPaki — 파킨슨 조기 스크리닝</h2>
-  <p>WAV 파일을 선택하고 업로드하세요.</p>
+  <div class="wrap">
+    <!-- 히어로 -->
+    <section class="hero">
+      <div>
+        <img class="logo" src="/img/logo.png" alt="PakiPaki 로고"/>
+        <h1>AI 음성 분석으로 파킨슨 의심 신호를 빠르게 스크리닝</h1>
+        <p>녹음 파일 업로드만으로 리듬·진폭·스펙트럼 특징을 정량화해 결과를 즉시 제공합니다.</p>
+      </div>
+      <div class="illust">
+        <img src="/img/hero.png" alt="음성 업로드 일러스트"/>
+      </div>
+    </section>
 
-  <input type="file" id="fileInput" accept=".wav,audio/wav" />
-  <button id="btnUpload" disabled>업로드</button>
+    <!-- 3 포인트 -->
+    <section class="row">
+      <div class="card">
+        <h3>간편한 업로드</h3>
+        <div class="muted">앱 설치 없이 웹에서 파일만 올리면 돼요.</div>
+      </div>
+      <div class="card">
+        <h3>설명 가능한 결과</h3>
+        <div class="muted">ZCR·MFCC 등 핵심 특징값을 함께 제공합니다.</div>
+      </div>
+      <div class="card">
+        <h3>빠른 피드백</h3>
+        <div class="muted">수 초 내 결과를 받아 다음 단계를 준비하세요.</div>
+      </div>
+    </section>
 
-  <p id="status">대기중</p>
-  <div id="result"></div>
+    <!-- 소개 -->
+    <section class="section">
+      <h2>PakiPaki 소개</h2>
+      <div class="note">주의: 본 서비스는 의료진의 진단을 대체하지 않으며 참고용으로만 사용해 주세요.</div>
+      <p style="margin-top:10px">
+        PakiPaki는 음성 신호의 미세한 변화를 정량화하여 <b>파킨슨과 관련될 수 있는 이상 패턴</b>을 스크리닝하는 웹 플랫폼입니다.
+        녹음 파일 업로드만으로 복잡한 절차 없이 위험 신호 가능성을 빠르게 확인하실 수 있습니다.
+      </p>
+    </section>
 
-  <script src="app.js"></script>
+    <!-- 진단 시작하기(슬라이드 이미지 + 투명 버튼) -->
+    <section class="slide-cta">
+      <!-- 마지막 4번째 이미지 넣기 -->
+      <img src="/img/slide4.png" alt="진단 시작하기 안내 슬라이드" class="slide-img">
+      <!-- ↓↓↓ 이 투명 영역이 이미지 속 '진단하기' 버튼 위치를 덮습니다 -->
+      <a class="hotspot"
+         href="https://pakipaki-web-lqng.onrender.com/"
+         target="_blank" rel="noopener"
+         aria-label="진단하기"></a>
+    </section>
+
+    <!-- (선택) 이미지 아래에도 버튼을 노출하고 싶으면 주석 해제
+    <div class="center" style="margin-top:14px">
+      <a class="btn" href="https://pakipaki-web-lqng.onrender.com/" target="_blank" rel="noopener">진단하기</a>
+    </div>
+    -->
+  </div>
 </body>
 </html>
 
